deploy/platform/vault/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/part-of: platform-vault
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
